--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,16 @@ header {
     color: #4A4338;
 }
 
+.paper li {
+    margin-bottom: 9px;
+    margin-left: 9px;
+    font-size: 18px;
+    line-height: 1.8;
+    margin-bottom: 20px;
+    text-align: justify;
+    color: #4A4338;
+}
+
 .divider {
     width: 100px;
     height: 2px;
