--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ header {
     margin-left: 9px;
     font-size: 18px;
     line-height: 1.8;
-    text-align: justify;
+    text-align: left;
     color: #4A4338;
 }
 
